	  URLs, e.g. URLs to open Inbox in Yahoo/MSN protocols, or the Yahoo
	  Captcha when joining chat rooms.
	* Fix displaying umlauts etc. in non-utf8 locale (fix in libgnt).

	Pidgin:
	* The userlist in a multiuser chat can be styled via gtkrc by using the
	  widget name "pidgin_conv_userlist". (Heiko Schmitt)
	* Add a hold button to the media window.

	Pidgin Preference and Preference Window Changes:
	* Removed the "Use font from theme" and "Conversation Font" preferences
	  for everyone except Windows users.  The font can be controlled from the
	  Pidgin GTK+ Theme Control plugin.
	* Tabs in the Preferences window are now on the left side.
	* The Browser tab is now visible for GNOME users.
	* Added a Proxy tab shown no matter what environment Pidgin runs in.
	* The Browser and Proxy tabs show appropriate GNOME-specific messages and
	  allow launching the correct applications to change the relevant GNOME
	  preferences if found.  These were previously together on the Network
	  tab.
	* Moved the port range spin buttons on the Network tab to be beside the
	  checkbox that enables/disables them.
	* Reorganized preferences on the Status/Idle tab to have one less
	  "section."
	* Reorganized preferences on the Sounds tab to have one less "section."
	* Renamed Smiley Themes tab to Themes.
	* Moved Buddy List Theme and Status Icon Theme selectors from Interface
	  tab to Themes tab.
	* Moved Sound Theme selector from Sounds tab to Themes tab.
	* Changed the Smiley Theme selector to be consistent with the other theme
	  selectors.
	* Rearranged tabs such that Interface is first and all remaining tabs are
	  alphabetized in English.

version 2.6.3 (10/16/2009):
	General:
	* Fix a crash when performing DNS queries on Unixes that use the
	  blocking DNS lookups.  (Brian Lu)

	AIM and ICQ:
	* Fix a crash when some clients send contacts in a format we don't
	  understand.
	* Fix blocking and other privacy lists.  (Thanks to AOL)

version 2.6.2 (09/05/2009):
	libpurple: